--- a/index.html
+++ b/index.html
@@ -16,12 +16,134 @@
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
         crossorigin="anonymous"
         />
+        <!--Google Fonts-->
+        <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@500&family=Vampiro+One&display=swap" rel="stylesheet">
         <!--CSS specific to this Web App-->
         <link rel="stylesheet" href="assets/style.css" />
-        <title>What's the Weather?</title>
+        <title>How's the Weather Up There</title>
     </head>
     <body>
-
+        <header class="jumbotron jumbotron-fluid title-bar">
+            <div class="container title-textbox">
+              <h1 class="display-4">How's the Weather Up There?</h1>
+              <p class="lead">Prepare for the day and view the next 5.</p>
+            </div>
+        </header>
+        <div class="page-content">
+            <div class="row">
+                <div class="col-md-4 side-bar">
+                    <div class="wrapper">
+                        <form class="form-inline">
+                            <div class="form">
+                              <input class="form-control" placeholder="City Name">
+                            </div>
+                            <button class="btn btn-primary">Search</button>
+                        </form>
+                        <h1 class="search-history">Search History</h1>
+                        <ul class="list-group">
+                            <!-- For Testing: line 42 will be appended via functions -->
+                            <li class="list-group-item">(first city)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-8 main-content">
+                    <div class="wrapper">
+                        <div class="row">
+                            <h1 class="display-4 five-day">Current Forecast</h1>
+                        </div>
+                        <div class="row main-card">
+                            <div class="card" style="width: 24rem;">
+                                <div class="card-body">
+                                  <h5 class="card-title current-city">Current City</h5>
+                                  <h6 class="card-subtitle mb-2 text-muted date">Today:</h6>
+                                  <p class="temp">Temperature: </p>
+                                  <p class="humid">Humidity: </p>
+                                  <p class="wind-speed">Wind Speed: </p>
+                                  <p class="uv-index">UV Index: </p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="row">
+                            <h1 class="display-4 five-day">5 Day Forecast</h1>
+                        </div>
+                        <div class="row">
+                            <div class="card-deck">
+                                <div class="card">
+                                  <!-- <img src="..." class="card-img-top" alt="..."> -->
+                                  <div class="card-body">
+                                    <h5 class="card-title forecast-day"></h5>
+                                    <p class="card-text">
+                                        <p class="date text-small">Date: </p> <!--add icon-->
+                                        <p class="temp text-small">Temperature: </p>
+                                        <p class="humid text-small">Humidity: </p>
+                                    </p>
+                                  </div>
+                                  <div class="card-footer">
+                                    <small class="text-muted">Last updated 3 mins ago</small>
+                                  </div>
+                                </div>
+                                <div class="card">
+                                  <!-- <img src="..." class="card-img-top" alt="..."> -->
+                                  <div class="card-body">
+                                    <h5 class="card-title forecast-day"></h5>
+                                    <p class="card-text">
+                                        <p class="date text-small">Date: </p> <!--add icon-->
+                                        <p class="temp text-small">Temperature: </p>
+                                        <p class="humid text-small">Humidity: </p>
+                                    </p>
+                                  </div>
+                                  <div class="card-footer">
+                                    <small class="text-muted">Last updated 3 mins ago</small>
+                                  </div>
+                                </div>
+                                <div class="card">
+                                  <!-- <img src="..." class="card-img-top" alt="..."> -->
+                                  <div class="card-body">
+                                    <h5 class="card-title forecast-day"></h5>
+                                    <p class="card-text">
+                                        <p class="date text-small">Date: </p> <!--add icon-->
+                                        <p class="temp text-small">Temperature: </p>
+                                        <p class="humid text-small">Humidity: </p>
+                                    </p>
+                                  </div>
+                                  <div class="card-footer">
+                                    <small class="text-muted">Last updated 3 mins ago</small>
+                                  </div>
+                                </div>
+                                <div class="card">
+                                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                                    <div class="card-body">
+                                      <h5 class="card-title forecast-day"></h5>
+                                      <p class="card-text">
+                                        <p class="date text-small">Date: </p> <!--add icon-->
+                                        <p class="temp text-small">Temperature: </p>
+                                        <p class="humid text-small">Humidity: </p> 
+                                      </p>
+                                    </div>
+                                    <div class="card-footer">
+                                      <small class="text-muted">Last updated 3 mins ago</small>
+                                    </div>
+                                  </div>
+                                  <div class="card">
+                                    <!-- <img src="..." class="card-img-top" alt="..."> -->
+                                    <div class="card-body">
+                                      <h5 class="card-title forecast-day"></h5>
+                                      <p class="card-text">
+                                        <p class="date text-small">Date: </p> <!--add icon-->
+                                        <p class="temp text-small">Temperature: </p>
+                                        <p class="humid text-small">Humidity: </p>
+                                      </p>
+                                    </div>
+                                    <div class="card-footer">
+                                      <small class="text-muted">Last updated 3 mins ago</small>
+                                    </div>
+                                  </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
+        </div>
 
 
 
