--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@500&family=Vampiro+One&display=swap" rel="stylesheet">
         <!--CSS specific to this Web App-->
         <link rel="stylesheet" href="assets/style.css" />
-        <title>How's the Weather Up There</title>
+        <title>Do I Need a Jacket?</title>
     </head>
     <body>
-        <header class="jumbotron jumbotron-fluid title-bar">
+        <header class="jumbotron jumbotron-fluid fixed-top title-bar">
             <div class="container title-textbox">
-              <h1 class="display-4">How's the Weather Up There?</h1>
+              <h1 class="display-4">Do I Need a Jacket?</h1>
               <p class="lead">Prepare for the day and view the next 5.</p>
             </div>
         </header>
