Alignment of content containers

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header class="jumbotron jumbotron-fluid fixed-top title-bar">
             <div class="container title-textbox">
               <h1 class="display-4">Do I Need a Jacket?</h1>
-              <p class="lead">Prepare for the day and view the next 5.</p>
+              <p class="lead">Prepare for the day and view the next 5</p>
             </div>
         </header>
         <div class="page-content">
