--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         crossorigin="anonymous"
         />
         <!--Google Fonts-->
-        <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@500&family=Vampiro+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Vampiro+One&display=swap" rel="stylesheet">
         <!--CSS specific to this Web App-->
         <link rel="stylesheet" href="assets/style.css" />
         <title>Do I Need a Jacket?</title>
@@ -54,12 +54,13 @@
                         <div class="row main-card">
                             <div class="card" style="width: 24rem;">
                                 <div class="card-body">
-                                  <h5 class="card-title current-city">Current City</h5>
-                                  <h6 class="card-subtitle mb-2 text-muted date">Today:</h6>
-                                  <p class="temp">Temperature: </p>
-                                  <p class="humid">Humidity: </p>
-                                  <p class="wind-speed">Wind Speed: </p>
-                                  <p class="uv-index">UV Index: </p>
+                                  <h5 class="card-title current-city"></h5>
+                                  <h6 class="card-subtitle mb-2 text-muted date"></h6>
+                                  <img class="weather-icon"></img>
+                                  <p class="temp"></p>
+                                  <p class="humid"></p>
+                                  <p class="wind-speed"></p>
+                                  <p class="uv-index"></p>
                                 </div>
                               </div>
                         </div>
@@ -69,7 +70,6 @@
                         <div class="row">
                             <div class="card-deck">
                                 <div class="card">
-                                  <!-- <img src="..." class="card-img-top" alt="..."> -->
                                   <div class="card-body">
                                     <h5 class="card-title forecast-day"></h5>
                                     <p class="card-text">
@@ -78,12 +78,8 @@
                                         <p class="humid text-small">Humidity: </p>
                                     </p>
                                   </div>
-                                  <div class="card-footer">
-                                    <small class="text-muted">Last updated 3 mins ago</small>
-                                  </div>
                                 </div>
                                 <div class="card">
-                                  <!-- <img src="..." class="card-img-top" alt="..."> -->
                                   <div class="card-body">
                                     <h5 class="card-title forecast-day"></h5>
                                     <p class="card-text">
@@ -92,12 +88,8 @@
                                         <p class="humid text-small">Humidity: </p>
                                     </p>
                                   </div>
-                                  <div class="card-footer">
-                                    <small class="text-muted">Last updated 3 mins ago</small>
-                                  </div>
                                 </div>
                                 <div class="card">
-                                  <!-- <img src="..." class="card-img-top" alt="..."> -->
                                   <div class="card-body">
                                     <h5 class="card-title forecast-day"></h5>
                                     <p class="card-text">
@@ -106,12 +98,8 @@
                                         <p class="humid text-small">Humidity: </p>
                                     </p>
                                   </div>
-                                  <div class="card-footer">
-                                    <small class="text-muted">Last updated 3 mins ago</small>
-                                  </div>
                                 </div>
                                 <div class="card">
-                                    <!-- <img src="..." class="card-img-top" alt="..."> -->
                                     <div class="card-body">
                                       <h5 class="card-title forecast-day"></h5>
                                       <p class="card-text">
@@ -120,12 +108,8 @@
                                         <p class="humid text-small">Humidity: </p> 
                                       </p>
                                     </div>
-                                    <div class="card-footer">
-                                      <small class="text-muted">Last updated 3 mins ago</small>
-                                    </div>
                                   </div>
                                   <div class="card">
-                                    <!-- <img src="..." class="card-img-top" alt="..."> -->
                                     <div class="card-body">
                                       <h5 class="card-title forecast-day"></h5>
                                       <p class="card-text">
@@ -134,9 +118,6 @@
                                         <p class="humid text-small">Humidity: </p>
                                       </p>
                                     </div>
-                                    <div class="card-footer">
-                                      <small class="text-muted">Last updated 3 mins ago</small>
-                                    </div>
                                   </div>
                             </div>
                         </div>
@@ -144,13 +125,6 @@
                 </div>
               </div>
         </div>
-
-
-
-
-
-
-        
         <!--JQuery Script-->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <!--Moment.js-->
