successful ajax calls, moment.js implementation and lil favicon added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Vampiro+One&display=swap" rel="stylesheet">
         <!--CSS specific to this Web App-->
         <link rel="stylesheet" href="assets/style.css" />
+        <link rel="icon" type="image/png" href="assets/favicon.png"/>
         <title>Do I Need a Jacket?</title>
     </head>
     <body>
@@ -57,10 +58,10 @@
                                   <h5 class="card-title current-city"></h5>
                                   <h6 class="card-subtitle mb-2 text-muted date"></h6>
                                   <img class="weather-icon"></img>
-                                  <p class="temp"></p>
-                                  <p class="humid"></p>
-                                  <p class="wind-speed"></p>
-                                  <p class="uv-index"></p>
+                                  <div class="temp"></div>
+                                  <div class="humid"></div>
+                                  <div class="wind-speed"></div>
+                                  <div class="uv-index"></div>
                                 </div>
                               </div>
                         </div>
@@ -69,53 +70,53 @@
                         </div>
                         <div class="row">
                             <div class="card-deck">
-                                <div class="card">
+                                <div class="card day-0">
                                   <div class="card-body">
                                     <h5 class="card-title forecast-day"></h5>
+                                    <h6 class="card-subtitle mb-2 text-muted date"></h6>
                                     <p class="card-text">
-                                        <p class="date text-small">Date: </p> <!--add icon-->
-                                        <p class="temp text-small">Temperature: </p>
-                                        <p class="humid text-small">Humidity: </p>
+                                        <img class="weather-icon"></img>
+                                        <div class="temp-humid text-small"></div>
                                     </p>
                                   </div>
                                 </div>
-                                <div class="card">
+                                <div class="card day-1">
                                   <div class="card-body">
                                     <h5 class="card-title forecast-day"></h5>
+                                    <h6 class="card-subtitle mb-2 text-muted date"></h6>
                                     <p class="card-text">
-                                        <p class="date text-small">Date: </p> <!--add icon-->
-                                        <p class="temp text-small">Temperature: </p>
-                                        <p class="humid text-small">Humidity: </p>
+                                      <img class="weather-icon"></img>
+                                      <div class="temp-humid text-small"></div>
                                     </p>
                                   </div>
                                 </div>
-                                <div class="card">
+                                <div class="card day-2">
                                   <div class="card-body">
                                     <h5 class="card-title forecast-day"></h5>
+                                    <h6 class="card-subtitle mb-2 text-muted date"></h6>
                                     <p class="card-text">
-                                        <p class="date text-small">Date: </p> <!--add icon-->
-                                        <p class="temp text-small">Temperature: </p>
-                                        <p class="humid text-small">Humidity: </p>
+                                      <img class="weather-icon"></img>
+                                      <div class="temp-humid text-small"></div>
                                     </p>
                                   </div>
                                 </div>
-                                <div class="card">
+                                <div class="card day-3">
                                     <div class="card-body">
                                       <h5 class="card-title forecast-day"></h5>
+                                      <h6 class="card-subtitle mb-2 text-muted date"></h6>
                                       <p class="card-text">
-                                        <p class="date text-small">Date: </p> <!--add icon-->
-                                        <p class="temp text-small">Temperature: </p>
-                                        <p class="humid text-small">Humidity: </p> 
+                                        <img class="weather-icon"></img>
+                                        <div class="temp-humid text-small"></div>
                                       </p>
                                     </div>
                                   </div>
-                                  <div class="card">
+                                  <div class="card day-4">
                                     <div class="card-body">
                                       <h5 class="card-title forecast-day"></h5>
+                                      <h6 class="card-subtitle mb-2 text-muted date"></h6>
                                       <p class="card-text">
-                                        <p class="date text-small">Date: </p> <!--add icon-->
-                                        <p class="temp text-small">Temperature: </p>
-                                        <p class="humid text-small">Humidity: </p>
+                                        <img class="weather-icon"></img>
+                                        <div class="temp-humid text-small"></div>
                                       </p>
                                     </div>
                                   </div>
