Better styling of main card

--- a/index.html
+++ b/index.html
@@ -57,11 +57,17 @@
                                 <div class="card-body">
                                   <h5 class="card-title current-city"></h5>
                                   <h6 class="card-subtitle mb-2 text-muted date"></h6>
-                                  <img class="weather-icon"></img>
-                                  <div class="temp"></div>
-                                  <div class="humid"></div>
-                                  <div class="wind-speed"></div>
-                                  <div class="uv-index"></div>
+                                  <div class="row">
+                                      <div class="col-4">
+                                        <img class="weather-icon"></img>
+                                      </div>
+                                      <div class="col">
+                                        <div class="temp"></div>
+                                        <div class="humid"></div>
+                                        <div class="wind-speed"></div>
+                                        <div class="uv-index"></div>
+                                      </div>
+                                  </div>
                                 </div>
                               </div>
                         </div>
