--- a/index.html
+++ b/index.html
@@ -31,6 +31,29 @@
             </div>
         </header>
         <div class="page-content">
+          <!--Modal for initial screen-->
+          <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle">What city are you in?</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p>Search for your city to see the weather forecast.</p>
+                  <form class="form-inline">
+                    <div class="form">
+                      <input class="form-control" placeholder="City Name">
+                    </div>
+                    <button class="btn btn-primary search-button">Search</button>
+                </form>
+                </div>
+              </div>
+            </div>
+          </div>
+            <!--Side Bar and Main Content once modal has been dismissed-->
             <div class="row">
                 <div class="col-md-4 side-bar">
                     <div class="wrapper">
@@ -38,12 +61,12 @@
                             <div class="form">
                               <input class="form-control" placeholder="City Name">
                             </div>
-                            <button class="btn btn-primary">Search</button>
+                            <button class="btn btn-primary search-button">Search</button>
                         </form>
                         <h1 class="search-history">Search History</h1>
                         <ul class="list-group">
-                            <!-- For Testing: line 42 will be appended via functions -->
-                            <li class="list-group-item">(first city)</li>
+                            <!-- For Testing: line 42 will be appended via functions
+                            <li class="list-group-item">(first city)</li> -->
                         </ul>
                     </div>
                 </div>
@@ -130,7 +153,7 @@
                         </div>
                     </div>
                 </div>
-              </div>
+            </div>
         </div>
         <!--JQuery Script-->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
