functionize me capn

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="form">
                       <input class="form-control" placeholder="City Name">
                     </div>
-                    <button class="btn btn-primary search-button">Search</button>
+                    <button class="btn btn-primary search-button-1">Search</button>
                 </form>
                 </div>
               </div>
@@ -61,7 +61,7 @@
                             <div class="form">
                               <input class="form-control" placeholder="City Name">
                             </div>
-                            <button class="btn btn-primary search-button">Search</button>
+                            <button class="btn btn-primary search-button-2">Search</button>
                         </form>
                         <h1 class="search-history">Search History</h1>
                         <ul class="list-group">
@@ -73,7 +73,7 @@
                 <div class="col-md-8 main-content">
                     <div class="wrapper">
                         <div class="row">
-                            <h1 class="display-4 five-day">Current Forecast</h1>
+                            <h1 class="display-4 current-forecast">Current Forecast</h1>
                         </div>
                         <div class="row main-card">
                             <div class="card" style="width: 24rem;">
