--- a/index.html
+++ b/index.html
@@ -88,7 +88,14 @@
                                         <div class="temp"></div>
                                         <div class="humid"></div>
                                         <div class="wind-speed"></div>
-                                        <div class="uv-index"></div>
+                                        <div class="row">
+                                          <div class="col-5">
+                                            <div class="uv-index">UV Index:</div>
+                                          </div>
+                                          <div class="col-7">
+                                            <div class="uv-number"></div>
+                                          </div>
+                                        </div>
                                       </div>
                                   </div>
                                 </div>
